# ChangeLog for dev-ruby/rubocop
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*rubocop-0.32.0 (12 Jun 2015)

  12 Jun 2015; Hans de Graaff <graaff@gentoo.org> +rubocop-0.32.0.ebuild:
  Version bump.

*rubocop-0.31.0 (15 May 2015)

  15 May 2015; Hans de Graaff <graaff@gentoo.org> +rubocop-0.31.0.ebuild:
  Version bump.

*rubocop-0.30.0 (17 Apr 2015)

  17 Apr 2015; Hans de Graaff <graaff@gentoo.org> +rubocop-0.30.0.ebuild:
  Version bump.

  10 Mar 2015; Hans de Graaff <graaff@gentoo.org> rubocop-0.29.1.ebuild:
  Fix use of hardcoded /tmp path in specs.

*rubocop-0.29.1 (10 Mar 2015)

  10 Mar 2015; Hans de Graaff <graaff@gentoo.org> +rubocop-0.29.1.ebuild,
  +metadata.xml:
  Initial import.
