@@ -2,3 +2,4 @@ DIST rubocop-0.29.1.gem 958976 SHA256 fdef20af47f52e8130d39665fb5770fdc7cb72d9c5
 DIST rubocop-0.30.0.tar.gz 990653 SHA256 cdd62edf036b19ebedc00d5c18f1c73d1669cc8003f5ef0c9aaed9e26c8eb144 SHA512 3ee21119c699149a48f4946cc6361dee480b8a0845e5b1f75e25ecd80a1f9586009d0c8e2400bd74bb934f9e0ae84bb6aeeb43ef084e9b5e9d279759b912cf64 WHIRLPOOL 61295a257fbda63ab7d848084a0b6a67e9e17e5bd07442fa9aa508effa93407e25d3fcd562d850fc6630513c8f18cae29afb7e1299606b82fd443bca61793f9f
 DIST rubocop-0.31.0.tar.gz 1001771 SHA256 3ce5519cbefcbb4cf1be4b75d23dc02cb98b082eba9a4fa93c848b96c04bdf4c SHA512 f9781888c927719e8d8804db95f7b9ed2101e0a15af4c65e0725afda06b22a29a234764f8e8293fef58c6d2bedcfa3bfeb3854fc6052ff2961269b484ad09c05 WHIRLPOOL c76e8baea3cdb8a5cbb67cd4380a7fb8dba10f21fafda583812cf1f42e94b6342fa3e975a83086611d570aa174b5d04f3069fafee7e426635116accabb24a33f
 DIST rubocop-0.32.0.tar.gz 1014053 SHA256 8254352a1dcd61fe4d81d18a48c7a42aa9229d8345590c6700e9f994000a2ed1 SHA512 207b47f099d5804b8d141484aaebe24c36dc5179eded5f778e2d8bb0f03cfbd506f6a76267ed6f3e2533d07056c9e6f2a5a618c602c19f6abab65cb95f0c98aa WHIRLPOOL b7f867283e2fcc557f74d6bd91df8a60d4d02d996522602706ca2fb389206be40f0161d82659bd0c29803a6058137fb27eae4878458d20c96cda7e72921ccd58
+DIST rubocop-0.32.1.tar.gz 1016920 SHA256 657d71bc5ec90b4c78f6e84f66bafe39174fa22c8fa022bfa3efe5e18c46f975 SHA512 97330d767110dff93b36fea7a0da54725940d4522b11f016c2548bd2f62400818380712ef95eb0b4164e4edc33afb33554ace5910e13a31136073f792e094f4e WHIRLPOOL 9ffd8b1f6b2fb10e7fc5ecf5916fdb5bfe0c297e323ce07306fe6337f1974a1429290695133f0beb98a334888d01ca9c503d7efeba03f0d2c5a57632f5fe843b
