@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*rubocop-0.32.1 (01 Jul 2015)
+
+  01 Jul 2015; Hans de Graaff <graaff@gentoo.org> +rubocop-0.32.1.ebuild:
+  Version bump.
+
 *rubocop-0.32.0 (12 Jun 2015)
 
   12 Jun 2015; Hans de Graaff <graaff@gentoo.org> +rubocop-0.32.0.ebuild:
